shared-business-logics/services/centralized-dashboard/Backend/Java/analytics-services/metrics-aggregation-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-aggregation-service
  namespace: centralized-dashboard
  labels:
    app: metrics-aggregation-service
    team: team-f-centralized-dashboard
spec:
  type: ClusterIP
  selector:
    app: metrics-aggregation-service
  ports:
  - name: http
    port: 8901
    targetPort: 8901
    protocol: TCP
